--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Joo's Data Science Blog
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+description: Joo's Data Science Blog
 github_username: zhukuixi
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "joo_DataScienceBlog"
